--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-  background-image: url('/docs/assets/mountains.jpg');
+  background-image: image('/assets/mountains.jpg');
   min-height: 100%;
 }
 
