--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@ body, html {
 
 /* Second image (Portfolio) */
 .bgimg-2 {
-  background-image: url("/docs/assets/mountains2.jpg");
+  background-image: url("/assets/mountains2.jpg");
   min-height: 400px;
 }
 
 /* Third image (Contact) */
 .bgimg-3 {
-  background-image: url("/docs/assets/mountains3.jpg");
+  background-image: url("/assets/mountains3.jpg");
   min-height: 400px;
 }
 
