--- a/index.html
+++ b/index.html
@@ -91,7 +91,10 @@ body, html {
 
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64" id="about">
-  <h3 class="w3-center">What is Alpha Ghost Camouflage?</h3>
+  
+  <h3 class="w3-center">
+    <img src="src/assets/AGLogo.png" class="w3-image w3-round" style="width:25%">
+    <br>What is Alpha Ghost Camouflage?</h3>
   <p class="w3-center"><em>Next Gen Camouflage</em></p>
   <p>Created by Alpha Dynamic Concepts, Alpha Ghost Camouflage is a next generation system of camouflage technology with optimal performance characteristics.
      Our patterns are scientifically designed to conceal in a wider range of distances and a broader spectrum of light conditions. The patterns used are fractal
@@ -162,12 +165,16 @@ body, html {
 
 <!-- Container (Contact Section) -->
 <div class="w3-content w3-container w3-padding-64" id="contact">
-  <h3 class="w3-center">WHERE WE WORK</h3>
-  <p class="w3-center"><em>We'd love your feedback!</em></p>
-
+  <h3 class="w3-center">WE WOULD LOVE TO WORK WITH YOU</h3>
+  <p class="w3-center"><em>How Can Alpha Ghost Camouflage Benefit Your Business?</em></p>
+  <p> Alpha Ghost Camouflage would be a perfect fit into any quality product line in the hunting and tactical industries, with 
+      our own line of hunting and tactical clothing devised with the most effective and aesthetically appealing camouflage available.
+      Based on a single, highly advanced pattern with environmentally matched colors that perfectly transcends both markets. Opportunities
+      for expansion could be enormous!
+  </p>
   <div class="w3-row w3-padding-32 w3-section">
     <div class="w3-col m4 w3-container">
-      <img src="src/assets/CO-map.jpg" class="w3-image w3-round" style="width:100%">
+      <img src="src/assets/AGLogo.png" class="w3-image w3-round" style="width:100%">
     </div>
     <div class="w3-col m8 w3-panel">
       <div class="w3-large w3-margin-bottom">
