--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body, html {
   height: 100%;
   color: #777;
   line-height: 1.8;
-  background-color: #CCCCCC;
+  background-color: #000000;
 }
 
 /* Create a Parallax Effect */
