--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Alpha Ghost Camo</title>
+<title>Alpha Ghost</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- For social media icons -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
 
 
 
@@ -97,12 +98,11 @@ body, html {
 
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64" id="about">
-  
-  <h3 class="w3-center">
+  <h2 class="w3-center">
     <img src="src/assets/AGLogo.png" class="w3-image w3-round" style="width:25%">
-    <br>What is Alpha Ghost Camouflage?</h3>
+    <br>What is Alpha Ghost Camouflage?</h2>
   <p class="w3-center"><em>Next Gen Camouflage</em></p>
-  <p>Created by Alpha Dynamic Concepts, Alpha Ghost Camouflage is a next generation system of camouflage technology with optimal performance characteristics.
+  <p>Created by Alpha Dynamic Concepts (ADC) in the ecologically diverse Colorado Rockies, Alpha Ghost Camouflage is a next generation system of camouflage technology with optimal performance characteristics.
      Our patterns are scientifically designed to conceal in a wider range of distances and a broader spectrum of light conditions. The patterns used are fractal
      based and mimic nature at the elemental level.
   </p>
@@ -111,49 +111,28 @@ body, html {
 <!-- Second Parallax Image with Portfolio Text -->
 <div class="bgimg-2 w3-display-container w3-opacity-min">
   <div class="w3-display-middle">
-    <span class="w3-xxlarge w3-text-white w3-wide">Design</span>
+    <!-- <span class="w3-xxlarge w3-text-white w3-wide">Design</span> -->
   </div>
 </div>
 
-<!-- Container (Portfolio Section) -->
-<!-- <div class="w3-content w3-container w3-padding-64" id="design">
-  <h3 class="w3-center">OUR DESIGNS</h3>
-  <p class="w3-center"><em> Whether you are trying to fill your freeze or defend your homeland <br> our patterns are designed to suit your needs in any terrain.</em></p><br>
-  <div class="w3-row">
-    <div class="w3-col m6 w3-center w3-padding-large">
-      <img src="src/assets/AGC Trifold Camo Samples.jpg" class="w3-round w3-image" alt="Camo Patterns" width="500" height="333">
-    </div> -->
 
-    <!-- Hide this text on small devices -->
-    <!-- <div class="w3-col m6 w3-hide-small w3-padding-large">
-      <p>Within the Alpha Ghost Camouflage line are planned environmental subsets such as Mountain Ghost - Urban Ghost - Desert Ghost - and more! Our design
-        team can easily and rapidly modify patterns to conceal in any specific environment necassary, which opens the door to unlimited marketing possibilities.
-      </p>
-      <img src="src/assets/alpha_ghost_camo.jpg" class="w3-round w3-image" alt="Camo Patterns" width="500" height="333">
-    </div>
-</div> -->
-
-<div class="w3-content w3-container w3-padding-64" id="design">
-  <h3 class="w3-center">OUR DESIGNS</h3>
+<div class="w3-content w3-container w3-padding-64" id="Camo Patterns">
+  <h3 class="w3-center">Camouflage Patterns</h3>
   <p class="w3-center">
     <em>
-      Whether you are trying to fill your freeze or defend your homeland
-      <br> Our patterns are designed to suit your needs in any terrain.
+      Within the Alpha Ghost Camouflage line are planned environmental subsets such as Mountain Ghost&trade; - Urban Ghost&trade; - Desert Ghost&trade; - and more! Our design
+      team can easily and rapidly modify patterns to conceal in any specific environment necessary, which opens the door to unlimited marketing possibilities.
+      Our patterns can be modified to suit market needs in any terrain.
     </em>
   </p>
   <div class="w3-row">
     <div class="w3-col m12 w3-center w3-padding-large">
       <img src="src/assets/AGC Camo Examples.jpg" class="w3-round w3-image" alt="Camo Patterns" width="100%" height="auto">
-      <p>
-        Within the Alpha Ghost Camouflage line are planned environmental subsets such as Mountain Ghost - Urban Ghost - Desert Ghost - and more! Our design
-        team can easily and rapidly modify patterns to conceal in any specific environment necessary, which opens the door to unlimited marketing possibilities.
+      <p class="w3-center">
+        Soldier wearing actual prototype model uniform in Mountain Arid Pattern.
       </p>
     </div>
   </div>
-</div>
-
-<!-- Container (High Performance Characteristics Section) -->
-<div class="w3-content w3-container w3-padding-64" id="characteristics">
   <h3 class="w3-center">Some of the High Performance Characteristics of the Alpha Ghost Camouflage Line</h3>
   <ul>
     <li>Natural Environment Matching Fractal Patterns Customizable to Any Environment (Broad or Specific) - Rapid Design Technology - No Guesswork</li>
@@ -166,15 +145,9 @@ body, html {
 </div>
 
 
-
-
-<!-- Modal for full size images on click-->
-<div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
-  <span class="w3-button w3-large w3-black w3-display-topright" title="Close Modal Image"><i class="fa fa-remove"></i></span>
-  <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
-    <img id="img01" class="w3-image">
-    <p id="caption" class="w3-opacity w3-large"></p>
-  </div>
+<!-- Benifits and Licensing -->
+<div class="w3-content w3-container w3-padding-64" id="design">
+  
 </div>
 
 <!-- Third Parallax Image with Design Text -->
@@ -184,8 +157,9 @@ body, html {
   </div>
 </div>
 
+
 <!-- Container (Contact Section) -->
-<div class="w3-content w3-container w3-padding-64" id="contact">
+<div class="w3-content w3-container w3-padding-32" id="contact" style="max-width: 1200px; margin: 0 auto;">
   <h3 class="w3-center">How Can Alpha Ghost Camouflage Benefit Your Business?</h3>
   <p> Alpha Ghost Camouflage would be a perfect fit into any quality product line in the hunting and tactical industries, with 
       our own line of hunting and tactical clothing devised with the most effective and aesthetically appealing camouflage available.
@@ -193,16 +167,21 @@ body, html {
       for expansion could be enormous!
   </p>
   <div class="w3-row w3-padding-32 w3-section">
-    <div class="w3-col m4 w3-container">
-      <img src="src/assets/AGLogo.png" class="w3-image w3-round" style="width:100%">
+    <!-- Left Image Column -->
+    <div class="w3-col m3 w3-container">
+      <img src="src/assets/AGMtnLogo.jpg" class="w3-image w3-round" style="width:100%">
     </div>
-    <div class="w3-col m8 w3-panel">
+    
+    <!-- Centered Form and Message Column -->
+    <div class="w3-col m6 w3-panel w3-center">
       <div class="w3-large w3-margin-bottom">
-        <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Colorado, US<br>
-        <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: +00 151515<br>
+        <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Colorado, USA<br>
         <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: mail@mail.com<br>
+        <a href="https://www.linkedin.com/company/alpha-dynamic-concepts-llc/" target="_blank">
+          <i class="fa fa-linkedin fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> LinkedIn: Alpha Dynamic Concepts LLC
+        </a>        
       </div>
-      <p>Swing by for a cup of <i class="fa fa-coffee"></i>, or leave me a note:</p>
+      <p>Send a message, or leave a note:</p>
       <form action="/action_page.php" target="_blank">
         <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
           <div class="w3-half">
@@ -213,18 +192,23 @@ body, html {
           </div>
         </div>
         <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
-        <button class="w3-button w3-black w3-right w3-section" type="submit">
+        <button class="w3-button w3-black w3-section" type="submit">
           <i class="fa fa-paper-plane"></i> SEND MESSAGE
         </button>
       </form>
+    </div>
+
+    <!-- Right Image Column -->
+    <div class="w3-col m3 w3-container">
+      <img src="src/assets/american-flag-small.jpg" class="w3-image" style="width:100%">
     </div>
   </div>
 </div>
 
 <!-- Footer -->
-<footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
+<footer class="w3-center w3-black w3-padding-32 w3-opacity w3-hover-opacity-off">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-  <div class="w3-xlarge w3-section">
+  <!-- <div class="w3-xlarge w3-section">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
     <i class="fa fa-instagram w3-hover-opacity"></i>
     <i class="fa fa-snapchat w3-hover-opacity"></i>
@@ -232,7 +216,7 @@ body, html {
     <i class="fa fa-twitter w3-hover-opacity"></i>
     <i class="fa fa-linkedin w3-hover-opacity"></i>
   </div>
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p> -->
 </footer>
  
 <script>
