--- a/index.html
+++ b/index.html
@@ -73,26 +73,21 @@ body, html {
     </a>
     <a href="#home" class="w3-bar-item w3-button">HOME</a>
     <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT</a>
-    <a href="#design" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> DESIGN</a>
+    <a href="#Camo Patterns" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> CAMO PATTERNS</a>
     <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACT</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
-      <i class="fa fa-search"></i>
-    </a>
   </div>
 
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
     <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
-    <a href="#design" class="w3-bar-item w3-button" onclick="toggleFunction()">DESIGN</a>
+    <a href="#Camo Patterns" class="w3-bar-item w3-button" onclick="toggleFunction()">CAMO PATTERNS</a>
     <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
-    <a href="#" class="w3-bar-item w3-button">SEARCH</a>
   </div>
 </div>
 
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
-    <!-- <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">ALPHA GHOST CAMOUFLAGE</span> -->
   </div>
 </div>
 
@@ -150,13 +145,13 @@ body, html {
   
 </div>
 
+
 <!-- Third Parallax Image with Design Text -->
 <div class="bgimg-3 w3-display-container w3-opacity-min">
   <div class="w3-display-middle">
      <span class="w3-xxlarge w3-text-white w3-wide">CONTACT</span>
   </div>
 </div>
-
 
 <!-- Container (Contact Section) -->
 <div class="w3-content w3-container w3-padding-32" id="contact" style="max-width: 1200px; margin: 0 auto;">
