added team info section and restructure src folder

--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-  background-image: url('/src/assets/AGC Landscape cropped.jpg');
+  background-image: url('/src/images/AGC Landscape cropped.jpg');
   min-height: 100%; 
 }
 
 /* Second image (Design) */
 .bgimg-2 {
-  background-image: url("/src/assets/mountains2.jpg");
+  background-image: url("/src/images/mountains2.jpg");
   min-height: 400px;
 }
 
 /* Third image (Contact) */
 .bgimg-3 {
-  background-image: url("/src/assets/mountains3.jpg");
+  background-image: url("/src/images/mountains4.jpg");
   min-height: 400px;
 }
 
@@ -94,7 +94,7 @@ body, html {
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64" id="about">
   <h2 class="w3-center">
-    <img src="src/assets/AGLogo.png" class="w3-image w3-round" style="width:25%">
+    <img src="src/images/AGLogo.png" class="w3-image w3-round" style="width:25%">
     <br>What is Alpha Ghost Camouflage?</h2>
   <p class="w3-center"><em>Next Gen Camouflage</em></p>
   <p>Created by Alpha Dynamic Concepts (ADC) in the ecologically diverse Colorado Rockies, Alpha Ghost Camouflage is a next generation system of camouflage technology with optimal performance characteristics.
@@ -103,14 +103,13 @@ body, html {
   </p>
 </div>
 
-<!-- Second Parallax Image with Portfolio Text -->
+<!-- Second Parallax Image -->
 <div class="bgimg-2 w3-display-container w3-opacity-min">
   <div class="w3-display-middle">
-    <!-- <span class="w3-xxlarge w3-text-white w3-wide">Design</span> -->
   </div>
 </div>
 
-
+<!-- Container (Camo Patterns Section) -->
 <div class="w3-content w3-container w3-padding-64" id="Camo Patterns">
   <h3 class="w3-center">Camouflage Patterns</h3>
   <p class="w3-center">
@@ -122,7 +121,7 @@ body, html {
   </p>
   <div class="w3-row">
     <div class="w3-col m12 w3-center w3-padding-large">
-      <img src="src/assets/AGC Camo Examples.jpg" class="w3-round w3-image" alt="Camo Patterns" width="100%" height="auto">
+      <img src="src/images/AGC Camo Examples.jpg" class="w3-round w3-image" alt="Camo Patterns" width="100%" height="auto">
       <p class="w3-center">
         Soldier wearing actual prototype model uniform in Mountain Arid Pattern.
       </p>
@@ -137,14 +136,30 @@ body, html {
     <li>Very Aesthetically Appealing for Marketability (Cool Factor)</li>
     <li>Exceptional and Unique Marketing Ideas</li>
   </ul>
+  <div class="w3-row">
+    <div class="w3-col m4 w3-center w3-padding-large">
+      <p class="w3-center">
+        Near-Infrared (NIR)
+      </p>
+      <img src="src/images/camo-NIR.JPG" class="w3-round w3-image" alt="Camo Patterns" width="100%" height="auto">
+    </div>
+    <div class="w3-col m4 w3-center w3-padding-large">
+      <p class="w3-center">
+        Cool White Room
+      </p>
+      <img src="src/images/camo-CWR.JPG" class="w3-round w3-image" alt="Camo Patterns" width="100%" height="auto">
+    </div>
+    <div class="w3-col m4 w3-center w3-padding-large">
+      <p class="w3-center">
+        Short-Wave Infrared (SWIR)
+      </p>
+      <img src="src/images/camo-SWIR.JPG" class="w3-round w3-image" alt="Camo Patterns" width="100%" height="auto">
+    </div>
+  </div>
+  <p class="w3-center">
+    Photos above provided by RothTec Engraving – New Bedford, MA. Samples were not treated with NIR suppressing additives.
+  </p>
 </div>
-
-
-<!-- Benifits and Licensing -->
-<div class="w3-content w3-container w3-padding-64" id="design">
-  
-</div>
-
 
 <!-- Third Parallax Image with Design Text -->
 <div class="bgimg-3 w3-display-container w3-opacity-min">
@@ -164,7 +179,7 @@ body, html {
   <div class="w3-row w3-padding-32 w3-section">
     <!-- Left Image Column -->
     <div class="w3-col m3 w3-container">
-      <img src="src/assets/AGMtnLogo.jpg" class="w3-image w3-round" style="width:100%">
+      <img src="src/images/AGMtnLogo.jpg" class="w3-image w3-round" style="width:100%">
     </div>
     
     <!-- Centered Form and Message Column -->
@@ -195,7 +210,54 @@ body, html {
 
     <!-- Right Image Column -->
     <div class="w3-col m3 w3-container">
-      <img src="src/assets/american-flag-small.jpg" class="w3-image" style="width:100%">
+      <img src="src/images/american-flag-small.jpg" class="w3-image" style="width:100%">
+    </div>
+  </div>
+  <div class="w3-row">
+    <div class="w3-col m3">
+      <h3 class="w3-center">
+        Robert Reitz
+      </h3>
+      <h5 class="w3-center">
+        Chief Operations Officer
+      </h5>
+      <p class="w3-center">
+        LCDR SEAL (Retired)<br>
+        Business Development
+      </p>
+    </div>
+
+    <div class="w3-col m2"><h3 class="w3-center"></h3>
+
+    </div>
+    <div class="w3-col m2">
+      <h3 class="w3-center">
+        Jeff Laurell
+      </h3>
+      <h5 class="w3-center">
+        President
+      </h5>
+      <p class="w3-center">
+        Business Development<br>
+        Avid Hunter &
+        Outdoorsman
+      </p>
+    </div>
+
+    <div class="w3-col m2"><h3 class="w3-center"></h3>
+
+    </div>
+    <div class="w3-col m3">
+      <h3 class="w3-center">
+        Colin Ingram Ph.D.
+      </h3>
+      <h5 class="w3-center">
+        Chief Technical Officer
+      </h5>
+      <p class="w3-center">
+        Biophysicist<br>
+        Background in Optical Spectroscopies and Fluorescence Microscopy Techniques
+      </p>
     </div>
   </div>
 </div>
@@ -203,17 +265,17 @@ body, html {
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-32 w3-opacity w3-hover-opacity-off">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-  <!-- <div class="w3-xlarge w3-section">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
-  </div>
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p> -->
+  <p class="w3-center">
+    PROTECTED UNDER U.S. COPYRIGHT LAW &copy;
+  </p>
 </footer>
  
+
+
+
+
+
+
 <script>
 // Modal Image Gallery
 function onClick(element) {
