boxes around team info

--- a/index.html
+++ b/index.html
@@ -213,8 +213,18 @@ body, html {
       <img src="src/images/american-flag-small.jpg" class="w3-image" style="width:100%">
     </div>
   </div>
+  
+  <style>
+    .person-section {
+      border: 2px solid #ccc;
+      padding: 10px;
+      margin-bottom: 20px;
+    }
+  </style>
+
+  <!-- Meet the team section -->
   <div class="w3-row">
-    <div class="w3-col m3">
+    <div class="w3-col m3 person-section">
       <h3 class="w3-center">
         Robert Reitz
       </h3>
@@ -230,7 +240,7 @@ body, html {
     <div class="w3-col m2"><h3 class="w3-center"></h3>
 
     </div>
-    <div class="w3-col m2">
+    <div class="w3-col m2 person-section">
       <h3 class="w3-center">
         Jeff Laurell
       </h3>
@@ -247,7 +257,7 @@ body, html {
     <div class="w3-col m2"><h3 class="w3-center"></h3>
 
     </div>
-    <div class="w3-col m3">
+    <div class="w3-col m3 person-section">
       <h3 class="w3-center">
         Colin Ingram Ph.D.
       </h3>
