--- a/index.html
+++ b/index.html
@@ -21,16 +21,22 @@ body, html {
 }
 
 /* Create a Parallax Effect */
-.bgimg-1, .bgimg-2, .bgimg-3 {
+.bgimg-1a, .bgimg-1b, .bgimg-2, .bgimg-3 {
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-/* First image (Logo. Full height) */
-.bgimg-1 {
-  background-image: url('/src/images/AGC Landscape cropped.jpg');
+/* First image for Computers (Logo. Full height) */
+.bgimg-1a {
+  background-image: url('/src/images/AGC-landscape-cropped.jpg');
+  min-height: 100%; 
+}
+
+/* First image for Phones (Logo. Full height) */
+.bgimg-1b {
+  background-image: url('/src/images/AGC-Landscape.jpg');
   min-height: 100%; 
 }
 
@@ -56,7 +62,7 @@ body, html {
 
 /* Turn off parallax scrolling for tablets and phones */
 @media only screen and (max-device-width: 1600px) {
-  .bgimg-1, .bgimg-2, .bgimg-3 {
+  .bgimg-1a, .bgimg-2, .bgimg-3 {
     background-attachment: scroll;
     min-height: 400px;
   }
@@ -86,7 +92,11 @@ body, html {
 </div>
 
 <!-- First Parallax Image with Logo Text -->
-<div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
+<div class="bgimg-1a w3-display-container w3-hide-small w3-opacity-min" id="home">
+  <div class="w3-display-middle" style="white-space:nowrap;">
+  </div>
+</div>
+<div class="bgimg-1b w3-display-container w3-hide-large w3-opacity-min" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
   </div>
 </div>
@@ -121,7 +131,7 @@ body, html {
   </p>
   <div class="w3-row">
     <div class="w3-col m12 w3-center w3-padding-large">
-      <img src="src/images/AGC Camo Examples.jpg" class="w3-round w3-image" alt="Camo Patterns" width="100%" height="auto">
+      <img src="src/images/camo-examples.jpg" class="w3-round w3-image" alt="Camo Patterns" width="100%" height="auto">
       <p class="w3-center">
         Soldier wearing actual prototype model uniform in Mountain Arid Pattern.
       </p>
