--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body, html {
 }
 
 /* Create a Parallax Effect */
-.bgimg-1a, .bgimg-1b, .bgimg-2, .bgimg-3 {
+.bgimg-1a, .bgimg-2, .bgimg-3 {
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -38,6 +38,7 @@ body, html {
 .bgimg-1b {
   background-image: url('/src/images/AGC-Landscape.jpg');
   min-height: 100%; 
+  max-width: 100%;
 }
 
 /* Second image (Design) */
