--- a/index.html
+++ b/index.html
@@ -283,12 +283,21 @@ body, html {
 </div>
 
 <!-- Footer -->
-<footer class="w3-center w3-black w3-padding-32 w3-opacity w3-hover-opacity-off">
+<footer class="w3-center w3-black w3-padding-32 w3-opacity w3-hover-opacity-off w3-hide-small w3-hide-medium">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <p class="w3-center">
     PROTECTED UNDER U.S. COPYRIGHT LAW &copy;
   </p>
 </footer>
+
+<footer class="w3-center w3-black w3-padding-32 w3-opacity w3-hover-opacity-off w3-hide-large">
+  <a href="#home" class="w3-button w3-light-grey" onclick="goTop()"><i class="fa fa-arrow-up w3-margin-right"></i> To the top</a>
+  <p class="w3-center">
+    PROTECTED UNDER U.S. COPYRIGHT LAW &copy;
+  </p>
+</footer>
+
+<a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
  
 
 
@@ -297,12 +306,18 @@ body, html {
 
 
 <script>
-// Modal Image Gallery
-function onClick(element) {
-  document.getElementById("img01").src = element.src;
-  document.getElementById("modal01").style.display = "block";
-  var captionText = document.getElementById("caption");
-  captionText.innerHTML = element.alt;
+function goTop(){
+  // Check if the browser supports smooth scrolling
+  if ('scrollBehavior' in document.documentElement.style) {
+    // Modern browsers with smooth scrolling support
+    window.scrollTo({
+      top: 0,
+      behavior: 'smooth'
+    });
+  } else {
+    // Fallback for browsers that do not support smooth scrolling
+    window.scrollTo(0, 0);
+  }
 }
 
 // Change style of navbar on scroll
