remove image caption from mobile

--- a/index.html
+++ b/index.html
@@ -158,29 +158,31 @@ body, html {
     <li>Very Aesthetically Appealing for Marketability (Cool Factor)</li>
     <li>Exceptional and Unique Marketing Ideas</li>
   </ul>
-  <div class="w3-row w3-hide-small">
-    <div class="w3-col m4 w3-center w3-padding-large">
-      <p class="w3-center">
-        Near-Infrared (NIR)
-      </p>
-      <img src="src/images/camo-NIR.JPG" class="w3-round w3-image" alt="Camo Patterns" width="100%" height="auto">
+  <div class="w3-hide-small">
+    <div class="w3-row">
+      <div class="w3-col m4 w3-center w3-padding-large">
+        <p class="w3-center">
+          Near-Infrared (NIR)
+        </p>
+        <img src="src/images/camo-NIR.JPG" class="w3-round w3-image" alt="Camo Patterns" width="100%" height="auto">
+      </div>
+      <div class="w3-col m4 w3-center w3-padding-large">
+        <p class="w3-center">
+          Cool White Room
+        </p>
+        <img src="src/images/camo-CWR.JPG" class="w3-round w3-image" alt="Camo Patterns" width="100%" height="auto">
+      </div>
+      <div class="w3-col m4 w3-center w3-padding-large">
+        <p class="w3-center">
+          Short-Wave Infrared (SWIR)
+        </p>
+        <img src="src/images/camo-SWIR.JPG" class="w3-round w3-image" alt="Camo Patterns" width="100%" height="auto">
+      </div>
     </div>
-    <div class="w3-col m4 w3-center w3-padding-large">
-      <p class="w3-center">
-        Cool White Room
-      </p>
-      <img src="src/images/camo-CWR.JPG" class="w3-round w3-image" alt="Camo Patterns" width="100%" height="auto">
-    </div>
-    <div class="w3-col m4 w3-center w3-padding-large">
-      <p class="w3-center">
-        Short-Wave Infrared (SWIR)
-      </p>
-      <img src="src/images/camo-SWIR.JPG" class="w3-round w3-image" alt="Camo Patterns" width="100%" height="auto">
-    </div>
-  </div>
-  <p class="w3-center">
-    Photos above provided by RothTec Engraving – New Bedford, MA. Samples were not treated with NIR suppressing additives.
-  </p>
+    <p class="w3-center">
+      Photos above provided by RothTec Engraving – New Bedford, MA. Samples were not treated with NIR suppressing additives.
+    </p>
+</div>
 </div>
 
 <!-- Third Parallax Image with Design Text -->
