--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ body, html {
 .w3-hover-opacity {cursor: pointer;}
 
 .w3-bar-item {
-  color: #000000; /* Hexadecimal code for light gray */
+  color: #ffffff; /* Hexadecimal code for light gray */
   /* Or you can use RGB values: color: rgb(204, 204, 204); */
 }
 
@@ -91,7 +91,7 @@ body, html {
   </div>
 
   <!-- Navbar on small screens -->
-  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
+  <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium">
     <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
     <a href="#Camo Patterns" class="w3-bar-item w3-button" onclick="toggleFunction()">CAMO</a>
     <a href="#team" class="w3-bar-item w3-button" onclick="toggleFunction()">TEAM</a>
@@ -114,7 +114,6 @@ body, html {
   <h2 class="w3-center">
     <img src="src/images/AGLogo.png" class="w3-image w3-round" style="width:25%">
     <br>What is Alpha Ghost Camouflage?</h2>
-  <p class="w3-center"><em>Next Gen Camouflage</em></p>
   <p>Created by Alpha Dynamic Concepts (ADC) in the ecologically diverse Colorado Rockies, Alpha Ghost Camouflage is a next generation system of camouflage technology with optimal performance characteristics.
      Our patterns are scientifically designed to conceal in a wider range of distances and a broader spectrum of light conditions. The patterns used are fractal
      based and mimic nature at the elemental level.
@@ -360,8 +359,9 @@ window.onscroll = function() {myFunction()};
 function myFunction() {
     var navbar = document.getElementById("myNavbar");
     if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
-        navbar.className = "w3-bar" + " w3-card" + " w3-animate-top" + " w3-white";
+        navbar.className = "w3-bar" + " w3-card" + " w3-animate-top" + " w3-black";
     } else {
+        navbar.classList.remove("w3-card", "w3-animate-top", "w3-black");
         navbar.className = navbar.className.replace(" w3-card w3-animate-top w3-white", "");
     }
 }
