added Commercial Section

--- a/index.html
+++ b/index.html
@@ -138,15 +138,10 @@ body, html {
     <div class="w3-col m12 w3-center w3-padding-large">
       <img src="src/images/camo-examples.jpg" class="w3-round w3-image" alt="Camo Patterns" width="100%" height="auto">
       <p class="w3-center">
-        Soldier wearing actual prototype model uniform in Mountain Arid Pattern.
+        Soldier wearing prototype model uniform in Mountain Arid Pattern.<br>
+        Mountain Arid Pattern on Rt. in the NIR/SWIR/ Cool White Room photos below.
       </p>
     </div>
-  </div>
-  <div class="w3-center">
-    <img src="src/images/camo-wraps.png" class="w3-image" alt="Camo Wraps">
-    <p class="w3-center">
-      Vehicle Wraps
-    </p>
   </div>
   <h3 class="w3-center">Some of the High Performance Characteristics of the Alpha Ghost Camouflage Line</h3>
   <ul>
@@ -184,7 +179,32 @@ body, html {
 </div>
 </div>
 
-<!-- Third Parallax Image with Design Text -->
+
+<!-- Another Parallax Image  -->
+
+
+<!-- Container (Commercial Section) -->
+<div class="w3-content w3-container w3-padding-64" id="about">
+  <h2 class="w3-center">
+    Commercial</h2>
+  <div class="w3-center">
+    <img src="src/images/camo-wraps.png" class="w3-image" alt="Camo Wraps">
+  </div>
+  <div class="w3-center">
+    <ul style="list-style-type: none; padding: 0;">
+      <li style="font-size: 22px;">Vehicle Wraps</li>
+      <li style="font-size: 22px;">Fashion
+          <!-- Sublist for Fashion -->
+          <ul style="list-style-type: none; padding: 0;">
+              <li style="font-size: 16px;">(Streetwear, Swimwear, Ski/Snowboard Gear, etc.)</li>
+          </ul>
+      </li>
+    </ul>
+  </div>
+</div>
+
+
+<!-- Third Parallax Image -->
 <div class="bgimg-3 w3-display-container w3-opacity-min">
   <div class="w3-display-middle">
      <span class="w3-xxlarge w3-text-white w3-wide">Meet The Team</span>
@@ -193,7 +213,7 @@ body, html {
 
 <!-- Container (The Team Section) -->
 <div class="w3-content w3-container w3-padding-32" id="team">
-  <div class="w3-content w3-container " id="Camo Patterns">
+  <div class="w3-content w3-container " id="Team">
     <h3 class="w3-center">About Alpha Dynamic Concepts</h3>
     <p class="w3-center w3-padding-32">
       Our team at Alpha Dynamic Concepts (ADC) has vastly expanded knowledge of the camouflage science through countless
@@ -262,7 +282,7 @@ body, html {
 
 
 
-<!-- Fourth Parallax Image with Design Text -->
+<!-- Fourth Parallax Image -->
 <div class="bgimg-4 w3-display-container w3-opacity-min">
   <div class="w3-display-middle">
      <span class="w3-xxlarge w3-text-white w3-wide">CONTACT</span>
