restructure team section

--- a/index.html
+++ b/index.html
@@ -118,6 +118,13 @@ body, html {
      Our patterns are scientifically designed to conceal in a wider range of distances and a broader spectrum of light conditions. The patterns used are fractal
      based and mimic nature at the elemental level.
   </p>
+  <p class="w3-center w3-padding-32">
+    Our team at Alpha Dynamic Concepts (ADC) has vastly expanded knowledge of the camouflage science through countless
+    hours of cross-disciplinary applied research and development, using a creative, unconventional mindset.
+    Our primary focus thus far has been directed towards military applications. ADC is only now beginning to pursue
+    business opportunities in the hunting and commercial industries. We intend to deliver the absolute best camouflage
+    system available.
+  </p>
 </div>
 
 <!-- Second Parallax Image -->
@@ -148,9 +155,10 @@ body, html {
     <li>Natural Environment Matching Fractal Patterns Customizable to Any Environment (Broad or Specific) - Rapid Design Technology - No Guesswork</li>
     <li>Commercial/Hunting Variations - Urban/Alpine/Mountain/Desert/Jungle/ Field, etc.</li>
     <li>Law Enforcement/Military Capable Variations</li>
-    <li>Simultaneously Reduces Contrast in Low Light Environments and Daylight Environments Across a Broad Spectral Region</li>
     <li>Very Aesthetically Appealing for Marketability (Cool Factor)</li>
     <li>Exceptional and Unique Marketing Ideas</li>
+    <li>Simultaneously Reduces Contrast in Low Light Environments and Daylight Environments Across a Broad Spectral Region
+      <br><div style="text-align: center;">(As demonstrated in the photos below)</div></li>
   </ul>
   <div class="w3-hide-small">
     <div class="w3-row">
@@ -207,21 +215,13 @@ body, html {
 <!-- Third Parallax Image -->
 <div class="bgimg-3 w3-display-container w3-opacity-min">
   <div class="w3-display-middle">
-     <span class="w3-xxlarge w3-text-white w3-wide">Meet The Team</span>
+     <span class="w3-xxlarge w3-text-white w3-wide">MEET THE TEAM</span>
   </div>
 </div>
 
 <!-- Container (The Team Section) -->
 <div class="w3-content w3-container w3-padding-32" id="team">
   <div class="w3-content w3-container " id="Team">
-    <h3 class="w3-center">About Alpha Dynamic Concepts</h3>
-    <p class="w3-center w3-padding-32">
-      Our team at Alpha Dynamic Concepts (ADC) has vastly expanded knowledge of the camouflage science through countless
-      hours of cross-disciplinary applied research and development, using a creative, unconventional mindset.
-      Our primary focus thus far has been directed towards military applications. ADC is only now beginning to pursue
-      business opportunities in the hunting and tactical industries. We intend to deliver the absolute best camouflage
-      system available.
-    </p>
     <style>
       .person-section {
         border: 2px solid #ccc;
