--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ body, html {
     <li>Very Aesthetically Appealing for Marketability (Cool Factor)</li>
     <li>Exceptional and Unique Marketing Ideas</li>
     <li>Simultaneously Reduces Contrast in Low Light Environments and Daylight Environments Across a Broad Spectral Region
-      <br><div style="text-align: center;">(As demonstrated in the photos below)</div></li>
+      <br><div class="w3-hide-small" style="text-align: center; ">(As demonstrated in the photos below)</div></li>
   </ul>
   <div class="w3-hide-small">
     <div class="w3-row">
